Fix act build