@@ -5,15 +5,13 @@ import kotlin.sequences.Sequence;
 import kotlin.text.MatchGroupCollection;
 import kotlin.text.MatchResult;
 import kotlin.text.Regex;
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.mozilla.universalchardet.UniversalDetector;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.ByteArrayInputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.StringWriter;
+import java.io.*;
 import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.util.*;
@@ -139,8 +137,9 @@ public class FormatCommand extends AbstractCommand {
 
     private String parseLineEndings(POMDocument pomFile) throws IOException {
         InputStream inputStream = new ByteArrayInputStream(pomFile.getOriginalPom());
-        byte[] bytes = inputStream.readAllBytes();
+        byte[] bytes = IOUtils.toByteArray(inputStream);
         String str = new String(bytes, pomFile.getCharset());
+
 
         Map<String, Integer> lineEndingCounts = new HashMap<>();
         for (String lineEnding : LINE_ENDINGS) {
