@@ -14,10 +14,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.File;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -200,7 +197,7 @@ public class Util {
             nativeExecutables.add(".cmd");
             nativeExecutables.replaceAll(ext -> path + ext);
         } else {
-            nativeExecutables = List.of(path);
+            nativeExecutables = Arrays.asList(path);
         }
 
         String pathContentString = System.getenv("PATH");
